<resources>
    <string name="app_name">MusiSearch</string>
    <string name="loading">Memuat data...</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login With Google</string>
    <string name="register">Sign Up</string>
    <string name="email">Email</string>
    <string name="telp_number">Telp. Number</string>
    <string name="fullname">Full Name</string>
    <string name="male">Male</string>
    <string name="genre">Genre</string>
    <string name="instrument">Instrument</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="next">Next</string>
    <string name="pilihan_pertama_adalah_alat_musik_yang_paling_dikuasai">*Pilihan pertama adalah alat musik yang paling dikuasai</string>
    <string name="region">Region</string>
    <string name="jakarta_barat">Jakarta Barat</string>
    <string name="jakarta_timur">Jakarta Timur</string>
    <string name="jakarta_pusat">Jakarta Pusat</string>
    <string name="jakarta_utara">Jakarta Utara</string>
    <string name="jakarta_selatan">Jakarta Selatan</string>
    <string name="save">Save</string>
    <string name="my_band">My Band</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="selasa_17_desember_2017">Selasa 17 Desember 2017</string>
    <string name="_2_40_pm">2:40 PM</string>
    <string name="submit">Submit</string>
    <string name="write_your_status">Write your status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dimas_aprizawandi">Dimas Aprizawandi</string>
    <string name="michael_gmail_com">michael@gmail.com</string>
    <string name="pop">Pop</string>
    <string name="piano">Piano</string>
    <string name="likes">%1$d Likes</string>
    <string name="band_name">Band Name</string>
    <string name="bio">Bio :</string>
    <string name="no_data">No Data</string>
    <string name="biography">Biography</string>
    <string name="all">All</string>
    <string name="chat">Chat</string>
    <string-array name="pickimage">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>
</resources>
