<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/home"/>
   <!-- <item
        android:id="@+id/action_band"
        android:icon="@drawable/ic_users_group"
        android:title="@string/my_band"/>-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_speech_bubble_couple_of_black_rectangular_shapes"
        android:title="@string/chat"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/my_profile"/>
</menu>