<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="@dimen/activity_login"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorOrange"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <!-- Username Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/editPass"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:textColorHint="@color/colorWhite"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ripple_button_login"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_below="@id/imageLogo"
            android:background="@drawable/ripple_button_login_google"
            android:clickable="true"
            android:drawableStart="@drawable/ic_google_plus"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/login_with_google"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>