<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/padding_status"
    android:layout_marginTop="@dimen/padding_status"
    android:layout_marginEnd="@dimen/padding_status"
    android:background="@color/colorGrey"
    android:foreground="?android:attr/selectableItemBackground">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/musisi_start"
        android:layout_marginEnd="@dimen/padding_status"
        android:layout_marginBottom="@dimen/padding_status"
        android:src="@drawable/ic_profile"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="0dp"
        app:civ_shadow="false"
        app:civ_shadow_color="#5f5f5f"
        app:civ_shadow_radius="5" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageProfile"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/dimas_aprizawandi"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textNameStatus" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/padding_status"
        android:layout_marginEnd="@dimen/musisi_end"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_thumbs_up_hand_symbol" />

        <TextView
            android:id="@+id/textLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/likes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textNameStatus" />

    </LinearLayout>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_toEndOf="@id/imageProfile"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/michael_gmail_com"
        android:textColor="@color/colorWhite80"
        android:textSize="@dimen/textDateStatus" />

    <TextView
        android:id="@+id/labelGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageProfile"
        android:layout_marginStart="@dimen/musisi_start"
        android:layout_marginBottom="@dimen/musisi_start"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/genre"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStatus" />

    <TextView
        android:id="@+id/labelInstrument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelGenre"
        android:layout_marginStart="@dimen/musisi_start"
        android:layout_marginBottom="@dimen/padding_status"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/instrument"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStatus" />

    <TextView
        android:id="@+id/labelDevide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageProfile"
        android:layout_marginStart="@dimen/musisi_devide"
        android:layout_marginBottom="@dimen/padding_status"
        android:fontFamily="@font/roboto_medium"
        android:text=":"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStatus" />

    <TextView
        android:id="@+id/textGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageProfile"
        android:layout_marginStart="@dimen/padding_status"
        android:layout_marginBottom="@dimen/padding_status"
        android:layout_toEndOf="@+id/labelDevide1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/pop"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStatus" />

    <ImageView
        android:id="@+id/imgChat"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@id/imageProfile"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_speech_bubble_couple_of_black_rectangular_shapes" />

    <ImageView
        android:id="@+id/imgAddLikes"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@id/imageProfile"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_thumbs_up_hand_symbol" />

    <TextView
        android:id="@+id/labelDevide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelGenre"
        android:layout_marginStart="@dimen/musisi_devide"
        android:layout_marginBottom="@dimen/padding_status"
        android:fontFamily="@font/roboto_medium"
        android:text=":"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStatus" />

    <TextView
        android:id="@+id/textInstrument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelGenre"
        android:layout_marginStart="@dimen/padding_status"
        android:layout_marginBottom="@dimen/padding_status"
        android:layout_toEndOf="@+id/labelDevide2"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/piano"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStatus" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textInstrument"
        android:layout_marginBottom="@dimen/padding_status"
        android:background="@drawable/ic_bottom_shadow" />

</RelativeLayout>