<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".ui.main.profile.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/general_padding">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_profile_top"
                    android:src="@drawable/ic_profile"
                    app:civ_border_color="#EEEEEE"
                    app:civ_border_width="0dp"
                    app:civ_shadow="false"
                    app:civ_shadow_color="#5f5f5f"
                    app:civ_shadow_radius="5" />

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageProfile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/general_padding"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/dimas_aprizawandi"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textNameProfile" />

                <TextView
                    android:id="@+id/textGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/musisi_start"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/genre"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textAddStatus" />

                <TextView
                    android:id="@+id/textInstrument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textGenre"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/musisi_start"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/instrument"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textAddStatus" />

                <TextView
                    android:id="@+id/labelBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textInstrument"
                    android:layout_marginTop="@dimen/musisi_start"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/bio"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textAddStatus" />

                <TextView
                    android:id="@+id/textBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/labelBio"
                    android:layout_marginTop="@dimen/musisi_start"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/bio"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textAddStatus" />
            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>